# Trading-Platform

./: .cppcheck-suppress  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: main.yml
data/: trades.json
docs/html/: annotated.html  class_trade-members.html  class_trade.html  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  classdetail_1_1binary__writer.html  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1file__input__adapter-members.html  classdetail_1_1file__input__adapter.html  classdetail_1_1input__stream__adapter-members.html  classdetail_1_1input__stream__adapter.html  classdetail_1_1invalid__iterator-members.html  classdetail_1_1invalid__iterator.html  classdetail_1_1iter__impl-members.html  classdetail_1_1iter__impl.html  classdetail_1_1iteration__proxy-members.html  classdetail_1_1iteration__proxy.html  classdetail_1_1iteration__proxy__value-members.html  classdetail_1_1iteration__proxy__value.html  classdetail_1_1iterator__input__adapter-members.html  classdetail_1_1iterator__input__adapter.html  classdetail_1_1json__ref-members.html  classdetail_1_1json__ref.html  classdetail_1_1json__reverse__iterator-members.html  classdetail_1_1json__reverse__iterator.html  classdetail_1_1json__sax__acceptor-members.html  classdetail_1_1json__sax__acceptor.html  classdetail_1_1json__sax__dom__callback__parser-members.html  classdetail_1_1json__sax__dom__callback__parser.html  classdetail_1_1json__sax__dom__parser-members.html  classdetail_1_1json__sax__dom__parser.html  classdetail_1_1lexer-members.html  classdetail_1_1lexer.html  (+290 more)
src/: main.cpp  trade.cpp  trade.h
tests/: test_trade.cpp
(+128 files in other folders)
